[gd_scene load_steps=5 format=3 uid="uid://fxcy6ik66bad"]

[ext_resource type="Script" path="res://Objects/Soul/soul.gd" id="1_80oym"]
[ext_resource type="Texture2D" uid="uid://bjh5nlvywuuhh" path="res://Assets/soul.png" id="2_2mcv5"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0sjfb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_2mcv5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_emv7u"]

[node name="Soul" type="Area2D" groups=["soul"]]
script = ExtResource("1_80oym")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.599994, 0.599994)
sprite_frames = SubResource("SpriteFrames_0sjfb")

[node name="Hitbox" type="CollisionShape2D" parent="."]
scale = Vector2(4, 4)
shape = SubResource("CircleShape2D_emv7u")

[node name="Timer" type="Timer" parent="."]
wait_time = 80.0
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 3.035
autostart = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_timer_3_timeout"]
